<resources>
    <string name="app_name">App</string>
    <string name="full_name_titile">Họ tên đầy đủ<font color="#E40000">*</font></string>
    <string name="date_title">Ngày Sinh<font color="#E40000">*</font></string>
    <string name="phone_title">Số ĐT<font color="#E40000">*</font></string>
    <string name="email_title">Email<font color="#E40000">*</font></string>
    <string name="identity_card_title">Số CMT<font color="#E40000">*</font></string>
    <string name="chat_title">Chats</string>
    <string name="search_title">Search</string>
</resources>